# zendesk-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
docs/: 00-overview.md  01-architecture.md  02-tool-reference.md  03-test-results.md  04-improvements.md
src/zendesk_mcp/: client.py  config.py  server.py  tools.py
tests/: conftest.py  test_batch_user_resolution.py  test_client_credentials.py  test_config.py  test_list_views.py  test_put_retry.py  test_search_organizations.py  test_tools.py
